# imchain

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/imchain/: __init__.py
src/imchain/operator/: __init__.pyi  _helpers.py  basics.py  core.py  meta.py  pool.py  slice.py
src/imchain/operator/util/: __init__.py  testing.py
tests/: test_basics.py  test_meta_ops.py  test_operator.py  test_pool.py
