[project]
name = "imchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chase", email = "chasehill70@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "lazy-loader>=0.4",
    "typing-extensions>=4.12.2",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]
